--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   color: #000000;
 }
 html {
-  height: 2000px;
+  height: 5000px;
 }
 img {
   display: block;
@@ -198,6 +198,7 @@ header nav ul li a:hover {
   margin-top: -70px;
 }
 .cards ul {
+  z-index: -1;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 40px 40px 40px 40px;
@@ -234,12 +235,8 @@ header nav ul li a:hover {
 
   box-shadow: 0px 12px 24px #242d4930;
   border-radius: 4px;
+}
 
-  transition: transform ease-in-out 0.2s;
-}
-.cards ul li:hover {
-  transform: scale(1.1);
-}
 .cards ul li div h4 {
   font-size: 16px;
   font-weight: 600;
@@ -253,4 +250,77 @@ header nav ul li a:hover {
 .cards ul li .icon {
   max-width: 35px;
   max-height: 45px;
+}
+/* ----------------------------------- */
+
+.projects {
+  width: 100%;
+  padding: 0 20px;
+  margin-top: 330px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: relative;
+}
+.projects h2 {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 600;
+  color: #242d49;
+}
+.projects h2 span {
+  color: #f09416;
+}
+.projects section div {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+.projects section div p {
+  color: #242d49;
+  font-weight: 600;
+  font-size: 18px;
+  margin-left: -50px;
+}
+.projects section div img {
+  max-width: 100px;
+}
+.projects ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 340px;
+  column-gap: 20px;
+  margin-top: 40px;
+}
+.projects ul li {
+  box-shadow: 0 12px 24px #242d4930;
+  background: #fafaf8;
+  overflow: hidden;
+  border-radius: 6px;
+
+  position: relative;
+}
+.projects ul li .view {
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  transition: bottom 0.2s ease-in-out;
+
+  color: #fff;
+  background-color: #242d4970;
+}
+.projects ul li:hover .view {
+  bottom: 0;
+}
+
+.projects.sites {
+  margin-top: 100px;
 }
