--- a/responsivo.css
+++ b/responsivo.css
@@ -111,9 +111,33 @@
   .projects ul {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 340px);
+    grid-template-rows: repeat(4, 450px);
     row-gap: 50px;
     margin-top: 40px;
   }
   /* ----------------- */
+
+  footer ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  footer ul li {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 30px;
+  }
+  footer ul li:first-child {
+    max-width: auto;
+  }
+
+  /* --------------------  */
+  .after-footer {
+    margin-top: 30px;
+  }
+  .after-footer p {
+    text-align: center;
+  }
 }
