--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ body {
   color: #000000;
 }
 html {
-  height: 5000px;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 img {
   display: block;
@@ -323,4 +324,58 @@ header nav ul li a:hover {
 
 .projects.sites {
   margin-top: 100px;
+}
+/* -------------------- */
+footer {
+  width: 100%;
+  padding: 0 20px;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: relative;
+}
+footer ul {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+footer ul li {
+  display: flex;
+  flex-direction: column;
+}
+footer ul li:first-child {
+  max-width: 300px;
+}
+footer ul li h4 {
+  color: #242d49;
+  font-weight: 700;
+  font-size: 24px;
+}
+footer ul li h4 span {
+  color: #f09416;
+}
+footer ul li p {
+  margin-top: 10px;
+}
+footer ul li a {
+  color: #000000;
+  padding: 5px 0;
+
+  transition: color ease 0.2s;
+}
+footer ul li a:hover {
+  color: #f09416;
+}
+/* --------------------  */
+.after-footer {
+  margin-top: 60px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.after-footer p {
+  font-style: italic;
 }
